--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,23 +1,11 @@
 <!--index.wxml-->
 <view class="container">
-  <dl>
-    <dt><image src="../images/pic.gif"/></dt>
+  <dl wx:for="{{message}}" wx:key="{{item.id}}">
+    <dt><image src="{{item.img}}"/></dt>
     <dd>
-    <p>狂想情人</p>
-    <p>作者：暗黑兔文化</p>
-    <p>渣男必须死</p>
+    <p>{{item.name}}</p>
+    <p>作者：{{item.author}}</p>
+    <p>{{item.tag}}</p>
     </dd>
-  </dl>
-   <dl>
-    <dt><image src="../images/pic.gif"/></dt>
-    <dd><p>魔法剩女攻略计划</p>
-    <p>作者：曼玉动漫</p>
-    <p>变身魔法少女，再去恋爱 </p></dd>
-  </dl>
-   <dl>
-    <dt><image src="../images/pic.gif"/></dt>
-    <dd><p>狂想情人</p>
-    <p>作者：暗黑兔文化</p>
-    <p>渣男必须死</p></dd>
   </dl>
 </view>
